# jupter_notebook

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  agentes_simples_4.ipynb  agentes_simples_5.ipynb  analytical_copilot_prototype.ipynb  chatOpenAI.ipynb  executar_relatorio_semanal.py  maestro_documentacao.docx  orion_mcp.ipynb  plano_agente_analise_os.docx  requirements.txt
orion_mcp/: .env.example  .gitignore  README.md  docker-compose.observability.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_server.py
orion_mcp/deploy/: prometheus.yml
orion_mcp/docker/: docker-compose.mysql-peer.yml  docker-compose.yml
orion_mcp/docs/: ARCHITECTURE.md  TRACEABILITY.md  api.md  architecture_gerado.md  heurística_de_tomada_de_decisão.md  modules.md  orion_mcp_plano_implementacao.md  pontos_a_corrigir.md  resumos.md
orion_mcp/migrations/: 001_conversation_state.sql
orion_mcp/prompts/: example_skill.yaml
orion_mcp/scripts/: check_query_sql_meta.py  generate_docs.py  generate_grpc.sh  validate_docs_vs_code.py  validate_openapi.py
orion_mcp/tests/: conftest.py  test_api_chat.py  test_api_chat_stream.py  test_chat_instrumentation.py  test_chat_request_domain.py  test_context_builder.py  test_context_suffixes.py  test_data_engine.py  test_data_interpreter.py  test_decision_engine.py  test_formatter.py  test_intent_heuristic.py  test_llm_context_max_chars.py  test_llm_model_config.py  test_llm_request_dump.py  test_llm_streaming.py  test_mcp_grpc_contract.py  test_memory_embed.py  test_perf_sec3.py  test_query_sql_meta_orion.py  test_registry_domain.py  test_settings_unified_limits.py  test_skill_yaml.py  test_sql_catalog_registry.py  test_state_transitions.py  test_tool_cache.py  test_tool_llm_preview_rows.py
orion_mcp_v2/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_celery_beat.py  run_celery_worker.py  run_server.py
orion_mcp_v2/docker/: Dockerfile  Dockerfile.api  Dockerfile.mcp-client  Dockerfile.mcp-server
orion_mcp_v2/docs/: MEMORIA_CONVERSACIONAL_ORION_MCP_V2.md  reference_lookups.md
orion_mcp_v2/migrations/: 001_users.sql  002_conversation_state.sql  003_memory_curta_analytics.sql  004_memory_consolidation_log.sql
orion_mcp_v2/scripts/: README.md  manual_consolidate.py  mcp_remote_client.py  migrate.py  smoke_mcp_client.sh
orion_mcp_v2/tests/: conftest.py  test_aggregator_registry.py  test_api_process_isolation.py  test_app_health.py  test_builder_aggregate_section.py  test_chat_context_unit.py  test_chat_identity_resolution.py  test_chat_stream.py  test_cross_selling_aggregate.py  test_cross_selling_compute.py  test_decision.py  test_mcp_client_integration.py  test_mcp_server_build.py  test_mcp_server_tools.py  test_memory_long_pkg.py  test_orchestrator_unit.py  test_pipeline.py  test_pipeline_skill_merge.py  test_prompt_contract.py  test_reference_lookups_loader.py  test_skills_load.py  test_sklearn_enrichment.py  test_sql_catalog.py
orion_mcp_v3/: README.md  migração_incremental_de_regras_uma_por_uma.md  pyproject.toml  requirements.txt
orion_mcp_v3/docs/: COMO_GEMINI_FUNCIONA.md  PLANO_EXECUCAO.md  README.md  ROADMAP_EXECUTÁVEL.md  SOLUCAO_ORION_MCP_V2_OVERVIEW.md
orion_mcp_v3/scripts/: README.md  apply_migrations.py  distill_supervised_memory.py  normalize_key_metrics_legacy.py  run_senna_replica.py
orion_mcp_v3/tests/: conftest.py  integration_pipeline_logger.py  test_analytical_context_isolation.py  test_analytics_executor.py  test_analytics_pipeline_trace.py  test_answer_capability.py  test_api_phase6.py  test_broker_phase3.py  (+27 more)
(+1043 files in other folders)
