[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-mcp"
version = "0.1.0"
description = "State-driven analytics orchestrator with MCP adapter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "grpcio>=1.80.0",
    "asyncmy>=0.2.9",
    "httpx>=0.28.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "pyyaml>=6.0.2",
    "openai>=1.59.0",
    "mcp>=1.2.0",
    "fastmcp>=2.2.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "celery[redis]>=5.4.0",
]

[project.scripts]
orion-migrate = "orion_mcp.infra.db.migrate:main"
orion-mcp-server = "orion_mcp.mcp_adapter.server.main:main"
orion-mcp-server-stdio = "orion_mcp.mcp_adapter.stdio_server:main"
orion-api = "orion_mcp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
    "grpcio-tools>=1.80.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orion_mcp = [
    "infra/db/migrations/*.sql",
    "mcp_adapter/query_sql/*.sql",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["src/orion_mcp/mcp_adapter/grpc_gen"]
