[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-mcp-v2"
version = "0.1.0"
description = "Orion MCP v2 — analytics orchestrator with Redis memory warming"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "asyncmy>=0.2.9",
    "httpx>=0.28.0",
    "asyncpg>=0.30.0",
    "redis>=5.2.0",
    "pyyaml>=6.0.2",
    "openai>=1.59.0",
    "prometheus-client>=0.21.0",
    "celery[redis]>=5.4.0",
    "fastmcp>=3.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.8.0",
]
analytics = [
    "pandas>=2.2.0",
    "scikit-learn>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
orion_mcp_v2 = [
    "db/mysql/query_sql/*.sql",
    "skill/skills/*.yaml",
    "skill/reference_lookups.md",
    "migrations/*.sql",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: requer serviços externos (ex.: MCP_SERVER_URL)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
