[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-mcp-v3"
version = "0.1.0"
description = "Orion MCP v3 — núcleo partilhável"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "asyncmy>=0.2.9",
    "redis>=5.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "python-dotenv>=1.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"